deploy/dev/namespaces-pvcs.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev-frontend
  labels:
    app.kubernetes.io/environment: dev
---
apiVersion: v1
kind: Namespace
metadata:
  name: dev-auth
  labels:
    app.kubernetes.io/environment: dev
---
apiVersion: v1
kind: Namespace
metadata:
  name: dev-backend
  labels:
    app.kubernetes.io/environment: dev
---
apiVersion: v1
kind: Namespace
metadata:
  name: dev-postgres
  labels:
    app.kubernetes.io/environment: dev
